# AI-Driven-CPU-Scheduler-Dashboard

./: CMakeLists.txt  DOCUMENTATION_GUIDE.md  Dockerfile  REPORT.md  app.py  render.yaml  requirements.txt  vercel.json
api/: index.py  simulate.js
include/GUI/: DashboardWidget.h  GanttWidget.h  MainWindow.h
include/ML/: FeatureExtractor.h  LinearRegressor.h  Predictor.h  Process.h  ProcessGenerator.h
include/Scheduler/: FCFSScheduler.h  IScheduler.h  MLScheduler.h  MetricsEngine.h  RoundRobinScheduler.h  SJFScheduler.h
src/: cli.cpp  dataset.py  main.cpp  model.py  scheduler.py  server.cpp  simulator.cpp  simulator.h  simulator.py
src/GUI/: DashboardWidget.cpp  GanttWidget.cpp  MainWindow.cpp
src/ML/: FeatureExtractor.cpp  LinearRegressor.cpp  Predictor.cpp  ProcessGenerator.cpp
src/Scheduler/: FCFSScheduler.cpp  MLScheduler.cpp  MetricsEngine.cpp  RoundRobinScheduler.cpp  SJFScheduler.cpp
static/css/: style.css
static/js/: main.js
templates/: index.html
tests/: CMakeLists.txt  ML_tests.cpp  Scheduler_tests.cpp  test_scheduler.py
